# Threat-Intel-MCP

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ANSVAR_PLATFORM_DEPLOYMENT_VALIDATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DISCLAIMER.md  DOCUMENTATION_FINALIZATION_SUMMARY.md  Dockerfile  GCP_COMPLETION_SUMMARY.md  HTTP_WRAPPER_REFACTOR_COMPLETE.md  MCP_IMPLEMENTATION.md  MCP_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PRIVACY.md  QUICK_TEST_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  TEST_SUITE_SUMMARY.md  TOOLS.md  alembic.ini  azure_blob_storage_security_sources.json  docker-compose.yml  gcp_cloud_storage_security_sources.json  manifest.json  pyproject.toml  run.py  server.json  sources.yml  test_ansvar_client_compat.py  test_ansvar_integration.py  test_http_refactor.py  test_mcp_stdio.py  validate_refactoring.sh
.github/: SECURITY-SETUP.md  dependabot.yml
.github/workflows/: check-updates.yml  codeql.yml  deploy-azure.yml  docker-security.yml  ghcr-build.yml  gitleaks.yml  mcpb-bundle.yml  mirror-cisa-kev.yml  ossf-scorecard.yml  publish.yml  semgrep.yml  socket-security.yml  test.yml  trivy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_attack_tables.py  003_add_atlas_tables.py  004_add_capec_tables.py  005_add_cwe_tables.py  006_add_d3fend_tables.py  007_fix_d3fend_column_sizes.py  007_widen_cvss_v4_vector.py  008_allow_null_cwe_description.py  008_extend_d3fend_relationship_types_and_add_tsvector_trigger.py  009_allow_null_atlas_stix_id.py  010_fix_atlas_case_study_nullables.py  011_add_cloud_security_tables.py  012_cloud_security_schema_fixes.py  012_fix_d3fend_column_sizes.py  013_add_owasp_llm_table.py  013_allow_null_cwe_description.py
docs/: CLOUD_SECURITY_HANDOVER.md  HANDOVER_CLOUD_SECURITY_PRODUCTION.md  MCP_QUICK_START.md  SETUP.md  TESTING.md
docs/architecture/: 2026-01-30-mcp-build-vs-buy-analysis.md  2026-01-30-mcp-offline-first-assessment.md
docs/modules/: atlas.md  attack.md  capec.md  cloud_security.md  cwe.md  d3fend.md
docs/plans/: 2026-01-31-cwe-module-design.md  2026-01-31-cwe-module.md  2026-01-31-d3fend-module-design.md  2026-01-31-d3fend-module.md  2026-02-07-documentation-fixes-changelog.md  2026-02-07-mcp-protocol-compliance-design.md
fixtures/: golden-hashes.json  golden-tests.json
scripts/: owasp_llm_data.json  sync_atlas_data.py  sync_attack_data.py  sync_capec_data.py  sync_cwe_data.py  sync_d3fend_data.py  sync_owasp_llm_data.py  test-documentation-examples.sh  validate-gcp-module.sh
src/cve_mcp/: __init__.py  __main__.py  citation.py  config.py  main.py
src/cve_mcp/api/: __init__.py  app.py  middleware.py  schemas.py  tools.py
src/cve_mcp/ingest/: __init__.py  atlas_parser.py  attack_parser.py  aws_api_client.py  azure_api_client.py  capec_parser.py  cloud_security_parser.py  cwe_parser.py  d3fend_parser.py  gcp_api_client.py
src/cve_mcp/mcp/: __init__.py  server.py  tool_adapter.py  transports.py
src/cve_mcp/models/: __init__.py  atlas.py  attack.py  base.py  capec.py  cloud_security.py  cve.py  cwe.py  d3fend.py  exploit.py  intelligence.py  metadata.py  owasp_llm.py
src/cve_mcp/services/: __init__.py  atlas_queries.py  attack_queries.py  cache.py  capec_queries.py  cloud_security_queries.py  cwe_queries.py  d3fend_queries.py  database.py  embeddings.py  owasp_llm_queries.py
src/cve_mcp/tasks/: __init__.py  celery_app.py  maintenance.py  sync_atlas.py  sync_attack.py  sync_capec.py  sync_cisa_kev.py  sync_cloud_security.py  sync_cwe.py  sync_d3fend.py  sync_epss.py  sync_exploitdb.py  sync_nvd.py  sync_owasp_llm.py
src/cve_mcp/utils/: __init__.py  nvd_parser.py
tests/: __init__.py  test_atlas_integration.py  test_attack_integration.py  test_dual_mode.py  test_integration.py  test_mcp_protocol.py  test_nvd_parser.py  test_schemas.py  test_version_comparison.py
tests/ingest/: test_atlas_parser.py  test_attack_parser.py  test_aws_api_client.py  test_azure_api_client.py  test_capec_parser.py  test_cwe_parser.py  test_d3fend_parser.py  test_gcp_api_client.py
tests/integration/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  conftest.py  test_atlas_semantic_search.py  test_aws_sync.py  test_azure_sync.py  test_gcp_sync.py  test_semantic_search.py
tests/models/: test_d3fend_models.py
tests/services/: test_d3fend_queries.py  test_embeddings.py
tests/tasks/: test_sync_atlas.py  test_sync_attack.py  test_sync_d3fend.py
