[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threat-intel-mcp"
version = "1.3.0"
description = "Threat Intelligence MCP Server - CVE, ATT&CK, Cloud Security, threat actors, semantic search"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Ansvar Systems" }
]
keywords = ["cve", "mcp", "security", "vulnerability", "nvd", "epss", "cisa-kev", "mitre-attack", "threat-intelligence", "apt", "threat-actors", "semantic-search", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "celery[redis]>=5.3.6",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "packaging>=23.0",
    "pgvector>=0.2.5",
    "openai>=1.12.0",
    "numpy>=1.24.0",
    "lxml>=5.0.0",  # For CWE XML parsing
    "pyyaml>=6.0.0",  # For ATLAS YAML parsing
    "mcp>=1.26.0",  # Official MCP Python SDK for JSON-RPC 2.0 protocol
    # Cloud provider APIs (for Cloud Security module production data)
    "boto3>=1.34.0",  # AWS Security Hub API
    "botocore>=1.34.0",
    "azure-identity>=1.15.0",  # Azure Policy API
    "azure-mgmt-resource>=23.0.0",
    "google-cloud-org-policy>=1.10.0",  # GCP Organization Policy API
    "google-auth>=2.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.15.10",
    "mypy>=1.8.0",
]

# CLI command remains "cve-mcp" and module remains "cve_mcp" for backward compatibility
# despite package rename to "threat-intel-mcp"
[project.scripts]
cve-mcp = "cve_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cve_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# Allow untyped defs in Celery tasks (decorator interference)
[[tool.mypy.overrides]]
module = "cve_mcp.tasks.*"
disallow_untyped_defs = false
warn_return_any = false

# Ignore missing stubs for third-party libraries
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "fast: marks tests as fast unit tests (< 1 second, no external deps)",
    "slow: marks tests as slow tests (may take several seconds)",
    "integration: marks tests as integration tests (may require external services)",
    "aws: marks tests as AWS-specific integration tests (requires AWS credentials)",
    "azure: marks tests as Azure-specific integration tests (some require Azure credentials)",
    "gcp: marks tests as GCP-specific integration tests (requires GCP credentials)",
]
# Run fast tests by default, use -m "slow" or -m "integration" for others
addopts = "--tb=short -v"
